<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="list_item_title">Edit item</string>

    <string name="action_menu_search">Search</string>
    <string name="action_menu_overflow">Other options</string>

    <string name="list_item_article_name_hint">Name</string>
    <string name="list_item_article_quantity_hint">Quantity</string>
    <string name="list_item_comment_hint">Comment</string>
    <string name="save_list_item_button">Save</string>

    <string name="article_name_error">The article needs a name</string>

    <string name="up_button_desc">Back button</string>
    <string name="speech_input_button_desc">Speech input</string>
    <string name="clear_input_button_desc">Clear input</string>
    <string name="lead_image_desc">Background image</string>
    <string name="category_checkmark_icon_desc">Checkmark icon</string>

    <string name="navigation_button_desc">Open navigation menu</string>

    <string name="apply">Apply</string>
    <string name="undo">Undo</string>

</resources>
