<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/navHost"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?attr/actionBarSize"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_graph"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_add_24"
        app:layout_anchor="@id/appBar"
        app:layout_anchorGravity="center_horizontal"/>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/appBar"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="bottom"
        android:theme="@style/ThemeOverlay.Basket.Dark"
        app:contentInsetStart="0dp"
        app:popupTheme="@style/ThemeOverlay.Basket.DayNight">

        <ImageButton
            android:id="@+id/navigationButton"
            style="@style/Widget.Basket.IconButton"
            android:contentDescription="@string/navigation_button_desc"
            app:srcCompat="@drawable/asl_menuback"/>
    </com.google.android.material.bottomappbar.BottomAppBar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/searchBarContainer"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="bottom"
        android:background="?attr/colorSurface"
        android:visibility="gone">

        <ImageButton
            android:id="@+id/searchBarBackButton"
            style="@style/Widget.Basket.IconButton"
            android:contentDescription="@string/up_button_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back_24"/>

        <de.janniskilian.basket.core.view.EnhancedEditText
            android:id="@+id/searchBarEditText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/two"
            android:background="@color/transparent"
            android:hint="@string/add_list_item_hint"
            android:imeOptions="actionSearch"
            android:inputType="textCapSentences"
            android:singleLine="true"
            app:layout_constraintEnd_toStartOf="@id/searchBarSpeechInputButton"
            app:layout_constraintStart_toEndOf="@id/searchBarBackButton"/>

        <ImageButton
            android:id="@+id/searchBarSpeechInputButton"
            style="@style/Widget.Basket.IconButton"
            android:contentDescription="@string/speech_input_button_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/asl_speechinputclear"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
