<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/app_bar_no_scroll"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/articleNameLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/two"
                android:layout_marginBottom="@dimen/two"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@id/listItemQuantityLayout"
                app:layout_constraintEnd_toEndOf="@id/listItemCommentLayout"
                app:layout_constraintStart_toStartOf="@id/listItemCommentLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/articleNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/list_item_article_name_hint"
                    android:inputType="textCapSentences"
                    android:nextFocusForward="@id/listItemQuantityEditText"
                    android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/listItemQuantityLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/two"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@id/listItemCommentLayout"
                app:layout_constraintEnd_toEndOf="@id/listItemCommentLayout"
                app:layout_constraintStart_toStartOf="@id/listItemCommentLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/listItemQuantityEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/list_item_article_quantity_hint"
                    android:inputType="textCapSentences"
                    android:nextFocusForward="@id/listItemCommentEditText"
                    android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/listItemCommentLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/two"
                android:layout_marginEnd="@dimen/two"
                android:layout_marginBottom="@dimen/two"
                android:imeOptions="actionDone"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@id/submitButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/listItemCommentEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/list_item_comment_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textCapSentences|textImeMultiLine"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submitButton"
                style="@style/Widget.Basket.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/two"
                android:layout_marginEnd="@dimen/two"
                android:layout_marginBottom="@dimen/two"
                android:text="@string/save_list_item_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
